[1.10.5-dev5]对插件进行部分重构,支持1.19.4+,准备重构插件页面